java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advFixture/BrokenClassToImplicitClass.java
<error descr="Implicitly declared class contains no 'main' method"><error descr="Package statement is not allowed for implicitly declared class">package p1;</error>

class <warning descr="Class 'Demo' is never used">Demo</warning>{
  public static void  <warning descr="Method 't1()' is never used">t1</warning>(){}
  public static void  <warning descr="Method 't2()' is never used">t2</warning>(){}
  public static void  <warning descr="Method 't3()' is never used">t3</warning>(){}
  public static void  <warning descr="Method 't4()' is never used">t4</warning>(){
    if<error descr="'(' expected"> </error>}
}
public static void  <warning descr="Method 't5()' is never used">t5</warning>(){}
public static void  <warning descr="Method 't6()' is never used">t6</warning>(){}
<error descr="'class' or 'interface' expected">}</error></error>